--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -75,6 +75,7 @@
       background-color: #222222;
       border-radius: 3px;
       padding: 1px 8px;
+      white-space: nowrap;
     }
 
     ::-moz-selection{ background:#c00; color:#fff; }
