--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -290,6 +290,10 @@ pre[class*="language-"] {
   .build {
     font-size: 50%;
   }
+  .pct {
+    font-size: .8em;
+    padding-left: 15px;
+  }
 }
 
 .star:before {
