--- a/slides/shared/themes/style/skew-dark.css
+++ b/slides/shared/themes/style/skew-dark.css
@@ -1,6 +1,6 @@
 /* line 3, skew-dark.scss */
 .deck-container {
-  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 3em;
   font-weight: 600;
   background: #000000;
@@ -16,7 +16,7 @@
     .deck-container .slide h2 {
       color: #E91E63;
       border-bottom: 0;
-      padding: 40px 0;
+      padding: 20px 0 10px 0;
       letter-spacing: -.05em;
       font-size: 2.4em;
       margin-bottom: 20px; }
