--- a/slides/shared/themes/style/skew-dark.scss
+++ b/slides/shared/themes/style/skew-dark.scss
@@ -1,7 +1,7 @@
 @import "compass/css3/text-shadow";
 
 .deck-container {
-  font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Helvetica Neue', sans-serif;
   font-size: 3em;
   font-weight: 600;
   background: #000000;
@@ -17,7 +17,7 @@
     h2 {
       color: #E91E63;
       border-bottom: 0;
-      padding: 40px 0;
+      padding: 20px 0 10px 0;
       letter-spacing: -.05em;
       font-size: 2.4em;
       margin-bottom: 20px;
