--- a/slides/2018/05-may/index.pug
+++ b/slides/2018/05-may/index.pug
@@ -236,6 +236,13 @@ html
           a(href='https://blog.mgechev.com/2018/05/09/introducing-guess-js-data-driven-user-experiences-web/') Read the intro blog post
       img(src='./images/guess-js.png', width='200px', alt='Guess.js')
     
+    section.slide
+      h2 "Release Radar"
+      ul
+        li A roundup of some interesting releases from April
+        li Courtesy of Github's blog
+        li Hyper, NetHack, Flask, Nerd Fonts, Monica, and 
+          a(href='https://blog.github.com/2018-05-09-release-radar-april-2018/') lots more
 
     //====================  Security  ====================
     
@@ -244,6 +251,19 @@ html
         h1 Security
       .shim(style='background-color:#c11;opacity:.7;')
     
+    section.slide
+      h2 GDPR Checklist
+      ul
+        li The 
+          a(href='https://advisera.com/eugdpracademy/gdpr/') articles of the GDPR 
+          |  are *really* involved
+        li Basically, if you could do anything in the EU, it applies to you
+        li It goes into effect May 25th!
+        li This 
+          a(href='https://gdprchecklist.io/') checklist
+          |  is a great TL;DR version
+      img(src='./images/gdpr.png', width='70%', alt='GDPR')
+
     section.slide
       h2 Auditing via npm
       blockquote Perform a moment-in-time security review of your project’s dependency tree.
@@ -265,17 +285,30 @@ html
         h1 In Case You<br>Missed It
       .shim(style='background-color:#555;opacity:.7;')
     
+    section.slide
+      h2 Is ServiceWorker Ready?
+      p
+        a(href='https://jakearchibald.github.io/isserviceworkerready/') Yes.
 
-    //====================  Upcoming Events  ====================
-    //
-      section class="slide cover" style="background-image:url(../../shared/resources/images/events.jpg)">
-      <div class="content">
-      <h1>Upcoming
-      <br>Events</h1>
-      </div>
-      <div class="shim" style="background-color:#1D3A52;opacity:.7;"></div>
-      </section
-    
+    section.slide
+      h2 StackOverflow for Teams
+      blockquote A private, secure home for your team’s questions and answers.
+      ul
+        li Basically a private label version of SO
+        li $10/month for now
+      img(src='./images/so.png', alt='StackOverflow for Teams')
+
+    section.slide
+      h2 Pure CSS Francine
+      blockquote An ongoing series in which I create art using only CSS and HTML.
+      p
+        a(href='https://jakearchibald.github.io/isserviceworkerready/') Check it out!
+      p
+        | Also see 
+        a(href='http://diana-adrianne.com/purecss-vignes/') Vignes
+        |  and 
+        a(href='http://diana-adrianne.com/purecss-zigario/') Zigario
+      img(src='./images/francine.png', alt='Francine')
 
     //====================  Something Completely Different  ====================
     
@@ -300,7 +333,8 @@ html
     
     //====================  Fin  ====================
     
-    section.slide
+    se
+    ction.slide
       h2 Thanks!
       h3
         a(href='https://edgeatx.org/slides/') https://edgeATX.org/slides
