Update slide links

--- a/slides/2018/05-may/index.pug
+++ b/slides/2018/05-may/index.pug
@@ -55,7 +55,7 @@ html
       p.indent &mdash; Intro to Elasticsearch (Hugo Martinez)
       p.indent &mdash; Using a Screen Reader to Test (Robert DeLuca)
       h3.star
-        a(href='https://slides.victoriabernard.com/#/') Putting Service Workers to Work
+        a(href='https://slides.victoriabernard.com/#/') Putting Workers to Work
       p.indent
         | &mdash; Victoria Bernard
     
