--- a/slides/2018/05-may/index.pug
+++ b/slides/2018/05-may/index.pug
@@ -302,7 +302,7 @@ html
       h2 Pure CSS Francine
       blockquote An ongoing series in which I create art using only CSS and HTML.
       p
-        a(href='https://jakearchibald.github.io/isserviceworkerready/') Check it out!
+        a(href='http://diana-adrianne.com/purecss-francine/') Check it out!
       p
         | Also see 
         a(href='http://diana-adrianne.com/purecss-vignes/') Vignes
