Add housekeeping slide

--- a/slides/2018/05-may/index.pug
+++ b/slides/2018/05-may/index.pug
@@ -80,6 +80,17 @@ html
     section.slide.cover(style='background-image:url(./images/cloudflare-stickers.jpg)')
       p(style='color: #fff;') Thanks to our sponsor:
     
+    //====================  Housekeeping  ====================
+
+    section.slide
+      h2 Housekeeping
+      ul
+        li Speakers and sponsors always wanted (
+          a(href='https://www.edgeatx.org') edgeatx.org
+          | )
+        li $5 Parking validation
+        li Driskill Bar after meetup
+        li Anyone hiring / looking?
 
     //====================  Begin slides  ====================
     
